[package]
name = "tina"
version = "0.2.0"
authors = ["wafrelka <wafrelka@gmail.com>"]

[dependencies]
oauthcli = "1.0"
url = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = "0.4"
rust-crypto = "0.2"
csv = "0.15"
rand = "0.3"
slog = "2.0"
slog-term = "2.0"
slog-scope = "3.0"
reqwest = "0.8"
