[package]
name = "tina"
version = "0.2.0"
authors = ["wafrelka <wafrelka@gmail.com>"]

[dependencies]
oauthcli = "1.0"
url = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = "0.4"
md5 = "0.3"
csv = "0.15"
rand = "0.3"
slog = "2.2"
slog-term = "2.4"
slog-scope = "4.0"
reqwest = "0.8"
