[package]
name = "tina"
version = "0.2.0"
authors = ["wafrelka <wafrelka@gmail.com>"]

[dependencies]
oauthcli = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
chrono = "0.4"
md5 = "0.3"
csv = "1"
rand = "0.4"
slog = "2.2"
slog-term = "2.4"
slog-scope = "4.0"
reqwest = "0.9"
